@@ -50,12 +50,12 @@ describe('generateSite()', () => {
     expect($('#search-input')).to.have.lengthOf(1)
     let searchScript = $('#search-script')
     expect(searchScript).to.have.lengthOf(1)
-    expect(searchScript.attr('data-base-path')).to.equal('..')
+    expect(searchScript.attr('data-site-root-path')).to.equal('..')
     expect(searchScript.attr('data-stylesheet')).to.equal('../_/css/search.css')
     const thePageContents = await fsp.readFile(ospath.join(outputDir, 'antora-lunr/named-module/the-page.html'))
     $ = cheerio.load(thePageContents)
     searchScript = $('#search-script')
-    expect(searchScript.attr('data-base-path')).to.equal('../..')
+    expect(searchScript.attr('data-site-root-path')).to.equal('../..')
     expect(searchScript.attr('data-stylesheet')).to.equal('../../_/css/search.css')
   })
 
